[tool.poetry]
name = "svkj"
version = "0.1.0"
description = ""
authors = ["Steve Vermeulen <sfvermeulen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
build_teal = "svkj.main:build_teal"
init_lua_rocks = "svkj.main:init_lua_rocks"
generate_rockspec = "svkj.main:generate_rockspec"
create_rock = "svkj.main:create_rock"
lua_rocks_make = "svkj.main:lua_rocks_make"
init_lua_rocks_deps = "svkj.main:init_lua_rocks_deps"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
